syntax = "proto3";

package protos;
option go_package = "./;protos";

message CheckUserServiceRequest {
  string serviceName = 1;
}
message CheckUserServiceResponse {
  string message = 1;
}

service CheckUserService {
  rpc CheckUserService(stream CheckUserServiceRequest) returns (stream CheckUserServiceResponse) {};
}